// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sqle/SqlAudit/SqlAuditStatusTag should match snap shot when status is auditing 1`] = `
<body>
  <div>
    <span
      class="ant-tag ant-tag-geekblue basic-tag-wrapper basic-small-tag-wrapper css-7o2rh7"
    >
      审核中
    </span>
  </div>
</body>
`;

exports[`sqle/SqlAudit/SqlAuditStatusTag should match snap shot when status is successfully 1`] = `
<body>
  <div>
    <span
      class="ant-tag ant-tag-green basic-tag-wrapper basic-small-tag-wrapper css-1ubynud"
    >
      审核成功
    </span>
  </div>
</body>
`;
